--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
     <img src="mountain.png" alt="mount-img">
   </div>
   <hr>
-  <div class="middle_div shadow-lg p-3 mb-5 bg-white rounded>
-    <div class="profile shadow-lg p-3 mb-5 bg-white rounded">
-      <img  class="profile_pic" src="pg.jpg" alt="Pratyush">
-      <h2>Hello.</h2>
-      <p>I am a Game + Web + App Developer. I'm also a Cyber Security Professional and World + National Record Holder in the field of Mental Mathematics</p>
+  <div class="middle_div shadow-lg p-3 mb-5 bg-white rounded">
+    <div class="shadow-lg p-3 mb-5 bg-white rounded">
+      <div class="shadow-lg p-3 mb-5 bg-white rounded">
+        <img  class="profile_pic" src="pg.jpg" alt="Pratyush">
+        <h2>Hello.</h2>
+        <p>I am a Game + Web + App Developer. I'm also a Cyber Security Professional and World + National Record Holder in the field of Mental Mathematics</p>
+      </div>
     </div>
     <hr>
     <div class="skills shadow-lg p-3 mb-5 bg-white rounded">
